# tryout-py-testing-httpd

./: README.md  pyproject.toml
tests/: conftest.py  test_requests.py
tests/httpd-root/: application-ld-json.jsonld  text-turtle  text-turtle.ttl  x-application-example-brol.brol
